# Poputchiki

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lighthouserc.json  .pgmigraterc  .trivyignore  AGENTS.md  CLAUDE.md  CLAUDE.md.2026-05-03.bak  README.md  biome.json  lefthook.yml  package.json  progress.txt  results.tsv  tasks.json  tsconfig.base.json  vitest.config.ts  vitest.contract.config.ts  vitest.integration.config.ts  vitest.security.config.ts
saas/saas-project-ralph/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  final_progress.txt  final_tasks.json  progress.txt  pyproject.toml  tasks.json  Доработать_скрипт.md
saas/saas-project-ralph/.claude/: settings.json
saas/saas-project-ralph/.github/workflows/: deploy.yml
saas/saas-project-ralph/tests/: __init__.py  test_auth_middleware.py  test_bot_app.py  test_config.py  test_database_connection.py  test_difficulty_service.py  test_domain_entities.py  test_evaluation_service.py  test_input_validation_middleware.py  test_onboarding_handler.py  test_onboarding_keyboards.py  test_onboarding_states.py  test_openai_client.py  test_practice_handler.py  test_practice_states.py  test_profile_repository.py  test_progress_repository.py  test_progress_service.py  test_question_entities.py  test_question_service.py  test_rate_limit_middleware.py  test_scheduler.py  test_session_repository.py  test_start_handler.py  test_stats_handler.py  test_subscription_middleware.py  test_subscription_repository.py  test_subscription_service.py  test_transcription_service.py  test_user_repository.py
(+879 files in other folders)
